[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "npmgeo"
version = "0.1"
description = "Package to add access list rules to Nginx Proxy Manager"
authors = ["Nir Lavi"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lavinir/npm-geoaccesslists"
repository = "https://github.com/lavinir/npm-geoaccesslists.git"

[tool.poetry.publishing]
repository = "pypi"
